unsuccessful attempts to compile